2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* applets/clock/clock.c:
	* applets/launcher/launcher.c: (mb_panel_applet_create):
	* applets/showdesktop/showdesktop.c: (mb_panel_applet_create):
	* matchbox-panel/Makefile.am:
	* matchbox-panel/mb-panel-scaling-image.c:
	* matchbox-panel/mb-panel-scaling-image.h:
	* matchbox-panel/mb-panel.h:

	Moved scaling icon theme icon logic into its own GtkImage subclass,
	and use this in the launcher and showdesktop applets.

	Don't look at MBPanelScalingImage yet or your eyes will burn!
	It still needs severe cleanup

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* applets/Makefile.am:
	* applets/showdesktop/Makefile.am:
	* applets/showdesktop/showdesktop.c:

	Added 'Show Desktop' button applet. Still needs to get an icon
	packed into it.

	* applets/clock/clock.c: (timeout), (mb_panel_applet_create):

	Put stuff into ClockApplet data structure.

	* applets/launcher/launcher.c: (button_release_event_cb),
	(mb_panel_applet_create):
	* applets/systray/systray.c:

	Use screen-changed signal correctly.

2006-08-22  Jorn Baayen  <jorn@openedhand.com>

	* applets/battery/Makefile.am:
	* applets/battery/battery.c: (timeout), (mb_panel_applet_create):
	* applets/battery/data/Makefile.am:
	* configure.ac:

	Use icons from gnome-power-manager for battery applet for now.

2006-08-21  Jorn Baayen  <jorn@openedhand.com>

	* applets/Makefile.am:
	* applets/battery/Makefile.am:
	* applets/battery/battery.c:
	* configure.ac:

	Add skels for a battery applet. Built only if libapm is available.
	Needs graphics.

	* applets/launcher/launcher.c: (launcher_data_free),
	(mb_panel_applet_create):

	Initialize icon_theme and icon_theme_changed_id to NULL and 0.
	
2006-08-21  Jorn Baayen  <jorn@openedhand.com>

	* applets/systray/Makefile.am:
	* applets/systray/systray.c: (tray_icon_added_cb),
	(message_sent_cb), (message_cancelled_cb), (screen_changed_cb),
	(mb_panel_applet_create):
	* configure.ac:
